@@ -36,18 +36,13 @@
   - ***** END LICENSE BLOCK ***** -->
 
 <?xml-stylesheet href="chrome://global/skin/" type="text/css"?>
-<!DOCTYPE dialog SYSTEM "chrome://firegpg/locale/password.dtd">
-<dialog title="&title;" orient="vertical" autostretch="always" 
-        onload="sizeToContent(); onLoad(this);" buttons="accept,cancel" 
+<dialog id="list-dialog" title="default title" orient="vertical" autostretch="always" 
+        onload="onLoad(this);" buttons="accept,cancel" 
         xmlns="http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul"
         ondialogaccept="return onAccept()">
-  <stringbundleset id="stringbundleset">
-    <stringbundle id="firegpg-strings" src="chrome://firegpg/locale/firegpg.properties"/>
-  </stringbundleset>
-  <script src="password.js"/>
-  <description control="password" id="description" value=""/>
-  <textbox id="password-textbox" type="password"/>
-  <checkbox id="save-password-checkbox" label="&save-password-checkbox;"/>
+  <script src="list.js"/>
+  <description control="list" id="description" value="default description"/>
+  <listbox id="list" flex="1" rows="10"></listbox>
 </dialog>
 
 <!-- vim:ai:et:sw=2:ts=2:sts=2:tw=0:fenc=utf-8
